--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,22 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  ssot-lint:
+    name: SSOT integrity check
+    runs-on: macos-latest
+    # Non-blocking until roadmap items implemented; review warnings manually
+    continue-on-error: true
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run SSOT lint
+        run: bash tools/ssot_check.sh
+
   swiftpm-tests:
     name: SwiftPM tests
     runs-on: macos-latest
+    needs: ssot-lint
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,6 +44,7 @@ jobs:
   xcode-tests:
     name: Xcode simulator tests
     runs-on: macos-latest
+    needs: ssot-lint
     steps:
       - name: Checkout
         uses: actions/checkout@v4
