--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run SSOT lint
-        run: bash tools/ssot_check.sh
+        run: bash tools/ssot_check.sh 2>&1 | tee "$RUNNER_TEMP/ssot-lint.log"
+
+      - name: Upload SSOT lint log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: ssot-lint-log
+          path: ${{ runner.temp }}/ssot-lint.log
 
   swiftpm-tests:
     name: SwiftPM tests
