Polish: soften test counts, add PR template
- Remove hard-coded test counts from SSOT, copilot-instructions, release checklist
- CI output is now the source of truth for test counts
- Add .github/PULL_REQUEST_TEMPLATE.md with SSOT compliance checklist
- Release checklist linked directly in PR template for release PRs

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Validate OpenAPI spec
       uses: char0n/swagger-editor-validate@v1
       with:
-        definition-file: docs/contracts/api.openapi.yaml
+        definition-file: docs/SSOT/contracts/api.openapi.yaml
