test: Add comprehensive test suites and gap closures (330 tests)
CRITICAL NOTE: Independent review found 42/100 readiness (not 100/100)
- Xcode tests fail: URLRouterTests (4), NavigationFlowTests (2)
- Session date boundary conflict: 6 AM (EventStorage) vs 6 PM (DoseWindowCalculator)
- Ghost session rows: deleteSession UPDATE doesn't DELETE rows
- SSOT/doc lint: 26 violations from tools/ssot_check.sh

Changes this session:
- Add TimeCorrectnessTests (14 tests) for DST/timezone handling
- Add NotificationScheduling protocol for mock injection
- Add fetchRowCount helper for cascade verification
- Add UIStateTests (13 tests) for phase transitions
- Add E2EIntegrationTests (7 tests) for full dose cycles
- Add NavigationFlowTests (4 tests) for deep links
- Add CI verification steps for test suite execution
- Update SSOT docs and architecture

See docs/INDEPENDENT_CODE_REVIEW_2025-12-25.md for blocking issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,14 +39,71 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Guard against ghost test directories
+        run: |
+          # Fail if duplicate test locations exist
+          if [ -d "Tests/DoseTapTests" ]; then
+            echo "❌ FAIL: Tests/DoseTapTests should not exist (duplicate of ios/DoseTapTests)"
+            exit 1
+          fi
+          # Check for duplicate SessionRepositoryTests files
+          COUNT=$(find . -name "SessionRepositoryTests.swift" -type f | wc -l | tr -d ' ')
+          if [ "$COUNT" -gt 1 ]; then
+            echo "❌ FAIL: Found $COUNT copies of SessionRepositoryTests.swift - should only have 1"
+            find . -name "SessionRepositoryTests.swift" -type f
+            exit 1
+          fi
+          echo "✅ No ghost test directories found"
+
       - name: Xcode version
         run: xcodebuild -version
 
-      - name: SwiftPM tests
+      - name: SwiftPM tests (default timezone)
         run: |
           set -euo pipefail
           swift --version
-          swift test --verbose
+          swift test --verbose 2>&1 | tee "$RUNNER_TEMP/swift-test-default.log"
+
+      - name: SwiftPM tests (TZ=UTC)
+        run: |
+          set -euo pipefail
+          echo "Running tests in UTC timezone..."
+          TZ=UTC swift test 2>&1 | tee "$RUNNER_TEMP/swift-test-utc.log"
+          echo "✅ UTC timezone tests passed"
+
+      - name: SwiftPM tests (TZ=America/New_York)
+        run: |
+          set -euo pipefail
+          echo "Running tests in America/New_York timezone..."
+          TZ=America/New_York swift test 2>&1 | tee "$RUNNER_TEMP/swift-test-eastern.log"
+          echo "✅ America/New_York timezone tests passed"
+
+      - name: Verify critical test suites executed
+        run: |
+          set -euo pipefail
+          LOG="$RUNNER_TEMP/swift-test-default.log"
+          CRITICAL_SUITES=(
+            "DoseWindowStateTests"
+            "DoseWindowEdgeTests"
+            "TimeCorrectnessTests"
+            "OfflineQueueTests"
+            "APIErrorsTests"
+          )
+          echo "Verifying critical SwiftPM test suites executed..."
+          for SUITE in "${CRITICAL_SUITES[@]}"; do
+            if grep -q "Test Suite '$SUITE'" "$LOG"; then
+              echo "✅ $SUITE executed"
+            else
+              echo "⚠️ Could not verify $SUITE (may use different log format)"
+            fi
+          done
+          # Check overall test count
+          if grep -q "Executed.*tests.*with 0 failures" "$LOG"; then
+            echo "✅ All SwiftPM tests passed"
+          else
+            echo "❌ SwiftPM tests may have failed"
+            exit 1
+          fi
 
   xcode-tests:
     name: Xcode simulator tests
@@ -80,6 +137,37 @@ jobs:
             CODE_SIGN_IDENTITY="" \
             DEVELOPMENT_TEAM="" \
             | tee "$RUNNER_TEMP/xcodebuild-test.log"
+
+      - name: Verify required test suites executed
+        run: |
+          set -euo pipefail
+          LOG="$RUNNER_TEMP/xcodebuild-test.log"
+          REQUIRED_SUITES=(
+            "SessionRepositoryTests"
+            "DataIntegrityTests"
+            "ExportIntegrityTests"
+            "HealthKitProviderTests"
+            "URLRouterTests"
+            "UISmokeTests"
+            "UIStateTests"
+            "E2EIntegrationTests"
+            "NavigationFlowTests"
+          )
+          echo "Verifying required test suites executed..."
+          MISSING=0
+          for SUITE in "${REQUIRED_SUITES[@]}"; do
+            if grep -q "Test Suite '$SUITE'" "$LOG"; then
+              echo "✅ $SUITE executed"
+            else
+              echo "❌ MISSING: $SUITE did not execute"
+              MISSING=$((MISSING + 1))
+            fi
+          done
+          if [ "$MISSING" -gt 0 ]; then
+            echo "❌ $MISSING required test suite(s) missing from execution"
+            exit 1
+          fi
+          echo "✅ All required test suites verified"
 
       - name: Upload xcodebuild log on failure
         if: failure()
