feat: App v2.0.0 - Settings reorganization, app metadata, icon fix, and feature additions
- Settings UI: Reorganized into 10 logical sections with better hierarchy
- Added SleepPlanDetailView and DiagnosticLoggingSettingsView
- App metadata: Updated to v2.0.0, category Medical, proper privacy descriptions
- App icon: Fixed Assets.xcassets not in Resources build phase, regenerated all icons
- Diagnostic logging: 3-tier system with UI toggles and structured backend
- Sleep therapy devices: Restored device picker functionality
- Export: Fixed zip generation with JSONL format
- Sleep aids: Added question to pre-sleep log with JSON storage
- Tools: Added icon regeneration scripts for SVG→PNG conversion
- Docs: Added comprehensive troubleshooting and configuration guides

--- a/ios/DoseTap/Info.plist
+++ b/ios/DoseTap/Info.plist
@@ -2,16 +2,34 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDisplayName</key>
+	<string>DoseTap</string>
+	<key>CFBundleName</key>
+	<string>DoseTap</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.0.0</string>
+	<key>CFBundleVersion</key>
+	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.medical</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2026 DoseTap. All rights reserved.</string>
+	<key>UIRequiresFullScreen</key>
+	<false/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDefault</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>org.axxessphila.dosetap</string>
+			<string>com.dosetap.ios</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>dosetap</string>
 			</array>
 		</dict>
 	</array>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
